silly alignment now fixed

--- a/static/css/show_presentations.css
+++ b/static/css/show_presentations.css
@@ -22,7 +22,9 @@ h3 {
 }
 
 h3:first {
-    margin: 0px
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .first {
